//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id String [pk]
  email String [unique, not null]
  name String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  cart UserCart
}

Table UserCart {
  id String [pk]
  userId String [unique, not null]
  total Float [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  user User [not null]
  CartItems CartItems [not null]
}

Table CartItems {
  id String [pk]
  cartId String [not null]
  productId String [not null]
  quantity Int [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  cart UserCart [not null]
}

Table Product {
  id String [pk]
  name String [not null]
  price Float [not null]
  description String [not null]
  imageUrl String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  Stock Stock
  StockReservation StockReservation [not null]
}

Table Stock {
  id String [pk]
  productId String [unique, not null]
  quantity Int [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  product Product [not null]
}

Table StockReservation {
  id String [pk]
  productId String [not null]
  quantity Int [not null]
  cartItemId String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  product Product [not null]
}

Table Order {
  id String [pk]
  userId String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  OrderItems OrderItems [not null]
}

Table OrderItems {
  id String [pk]
  orderId String [not null]
  productId String [not null]
  quantity Int [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  order Order [not null]
}

Ref: UserCart.userId - User.id

Ref: CartItems.cartId > UserCart.id

Ref: Stock.productId - Product.id

Ref: StockReservation.productId > Product.id

Ref: OrderItems.orderId > Order.id